infra/atuin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: atuin
  namespace: atuin
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`atuin.k.joshuachp.dev`)"
      kind: Rule
      services:
        - name: atuin
          port: http
  tls:
    domains:
      - main: k.joshuachp.dev
        sans:
          - "*.k.joshuachp.dev"
